# blackledger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  package-lock.json  pyproject.toml  pytest.ini  setup.cfg  setup.json  setup.py
blackledger/: __init__.py  auth.py  example_session.py  http.py  meta.py  model.py  response.py  search.py  settings.py  types.py
blackledger/api/: __init__.py  __router__.py  _search.py  accounts.py  currencies.py  ledgers.py  router.py  search.py  tenants.py  transactions.py
blackledger/database/: repository.py  type_adapters.py
blackledger/db/: queries.py  type_adapters.py
blackledger/domain/: actions.py  check.py  errors.py  model.py  types.py
blackledger/migrations/: 20230718035300931_ulid.yaml  20230718041340046_direction.yaml  20230718042206100_accounts.yaml  20230718042712870_currencies.yaml  20230718043005632_transactions.yaml  20230718043246972_entries.yaml  20231110035214790_currency.yaml  20231110035557748_account.yaml  20231110041326051_transaction.yaml  20231110041521593_entry.yaml  20231121030049089_immutable.yaml  20231202100215741_ledger.yaml  20231202100215741_tenant.yaml  20231202145316665_account.yaml  20231202145323950_transaction.yaml  20231202145327436_entry.yaml  20231202162859025_immutable.yaml  20240811021056080_bigid.yaml
blackledger/queries/: account.py
blackledger/tests/: conftest.py  fixtures.py  parameters.py  test_api.py  test_api_accounts.py  test_api_auth.py  test_api_balances.py  test_api_currencies.py  test_api_ledgers.py  test_api_tenants.py  test_api_transactions.py  test_domain_model.py  test_domain_transaction.py  test_domain_types.py
blackledger/ui/: __init__.py
blackledger/ui/static/: foo.txt
blackledger/ui/templates/: accounts.html  base.html  home.html
blackledger/ui/templates/accounts/: new.html  view.html  view.html.md
blackledger/ui/templates/components/: button-plus.html
docs/: 2023-07-18.md  2023-07-19.md  2023-11-08.md  2023-12-03.md  2024-01-14.md  2024-01-27.md  2024-08-05.md  2024-08-10.md  2024-09-07.md
script/: fmt.sh  lint.sh  load_fixtures.py  migrate.sh  run.sh  test.sh  waitpg.sh
src/: api.rs  main.rs
src/api/: home.rs
tests/: conftest.py  test_api_accounts.py  test_api_balances.py  test_api_currencies.py  test_api_tenants.py  test_api_transactions.py
ui/: .prettierrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.vue
ui/src/components/: AccountRegister.vue  AccountsTable.vue  TheWelcome.vue
ui/src/router/: index.js
ui/src/views/: AccountView.vue  HomeView.vue  LedgerView.vue
