[package]
name = "blackledger"
repository = "https://github.com/seanharrison/blackledger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = "1.0.192"
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1", features = ["full"] }
