[project]
description = "Fast, Immutable, Transactional: Pick three."
name = "blackledger"
version = "0.0.1"
authors = [{ name = "Sean Harrison", email = "sah@kruxia.com" }]
license = { text = "MPL 2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "base58~=2.1.1",
    "dateparser~=1.2.0",
    "Jinja2~=3.1.2",
    "orjson~=3.9.2",
    "psycopg[binary,pool]~=3.1.9",
    "pydantic~=2.4.2",
    "pydantic-settings~=2.0.3",
    "python-ulid~=1.1.0",
    "sqly[migration] @ git+https://github.com/kruxia/sqly@main#egg=sqly",
]

[project.optional-dependencies]
http = ["fastapi~=0.104.1", "gunicorn~=21.2.0", "uvicorn~=0.24.0"]
dev = ["black~=23.3.0", "ipython~=8.12.0", "isort~=5.12.0", "twine~=4.0.2"]
test = [
    "black~=23.3.0",
    "flake8~=6.0.0",
    "httpx~=0.25.1",
    "pytest~=7.3.1",
    "pytest-asyncio~=0.21.1",
    "pytest-cov~=4.0.0",
]

[build-system]
requires = ["setuptools>=45"]           #, "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["blackledger", "tests"]

# [tool.setuptools_scm]
# write_to = "blackledger/__version__.py"
