[project]
description = "Fast, Immutable, Transactional: Pick three."
name = "blackledger"
version = "0.0.1"
authors = [{ name = "Sean Harrison", email = "sah@kruxia.com" }]
license = { text = "MPL 2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Jinja2~=3.1.4",
    "orjson~=3.10.6",
    "psycopg[binary,pool]~=3.2.1",
    "pydantic~=2.8.2",
    "pydantic-settings~=2.4.0",
    "PyJWT~=2.8.0",
    "sqly[migration] @ git+https://github.com/kruxia/sqly@main#egg=sqly",
]

[project.optional-dependencies]
http = ["fastapi~=0.112.2", "gunicorn~=22.0.0", "uvicorn~=0.30.3"]
dev = ["ruff~=0.5.5", "ipython~=8.26.0", "twine~=5.1.1"]
test = [
    "ruff~=0.5.5",
    "dateparser~=1.2.0",
    "httpx~=0.27.0",
    "pytest~=8.3.2",
    "pytest-asyncio~=0.23.8",
    "pytest-cov~=5.0.0",
]

[build-system]
requires = ["setuptools>=45"]           #, "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["blackledger"]

# [tool.setuptools_scm]
# write_to = "blackledger/__version__.py"

[tool.coverage.run]
omit = ["blackledger/tests/*"]

[tool.coverage.report]
skip_covered = true
